<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="already_have">You have this book</string>
    <string name="already_want">You want this book</string>
    <string name="api_key">API Key</string>
    <string name="app_name">BookTrader</string>
    <string name="cancel">Cancel</string>
    <string name="clear_cache">Clear cache</string>
    <string name="coveters">Coveters</string>
    <string name="from">From:</string>
    <string name="have">Have</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox...</string>
    <string name="hi_there">Hi, there!</string>
    <string name="keywords">Keywords</string>
    <string name="loading">Loading</string>
    <string name="logging_in">Logging in</string>
    <string name="log_in">Login</string>
    <string name="log_out">Logout</string>
    <string name="messages">Messages</string>
    <string name="more">More</string>
    <string name="new_message">New Message</string>
    <string name="no_messages">No Messages :,(</string>
    <string name="owners">Owners</string>
    <string name="owns">Owns</string>
    <string name="password">Password</string>
    <string name="refresh">Refresh</string>
    <string name="remove">Remove</string>
    <string name="scan">Scan Barcode</string>
    <string name="search">Search</string>
    <string name="send_message">Send Message</string>
    <string name="subject">Subject:</string>
    <string name="to">To:</string>
    <string name="type_a_name">Type a name</string>
    <string name="user_details">User Details</string>
    <string name="username">Username</string>
    <string name="wants">Wants</string>
    <string name="want">Want</string>
</resources>
